[gd_scene load_steps=4 format=3 uid="uid://013m8ft7k8nl"]

[ext_resource type="Script" path="res://level_select.gd" id="1_088hc"]
[ext_resource type="Texture2D" uid="uid://blrk176hotvn0" path="res://empty box.png" id="3_dv0em"]
[ext_resource type="Texture2D" uid="uid://dxe7vpf45ga21" path="res://white arrow.png" id="4_igq3w"]

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_088hc")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -101.5
offset_top = -24.5
offset_right = 101.5
offset_bottom = 24.5
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center]The Invisible
Box Challenge"
fit_content = true
scroll_active = false

[node name="DrawnBox" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 19.0
offset_top = 84.0
offset_right = 319.0
offset_bottom = 384.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.267, 0.267)
texture = ExtResource("3_dv0em")

[node name="DrawnArrow" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 148.0
offset_top = 70.0001
offset_right = 258.0
offset_bottom = 178.0
grow_horizontal = 2
grow_vertical = 2
rotation = 2.53073
scale = Vector2(0.267, 0.267)
texture = ExtResource("4_igq3w")

[node name="TipText" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 134.0
offset_top = 82.0
offset_right = 293.0
offset_bottom = 138.0
grow_horizontal = 2
grow_vertical = 2
text = "You can't see it,
but it's still there!"
scroll_active = false

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 33.0
offset_top = -99.0
offset_right = 184.0
offset_bottom = -33.0
grow_vertical = 0
columns = 5

[node name="Button" type="Button" parent="GridContainer"]
layout_mode = 2
text = "01"

[node name="Button2" type="Button" parent="GridContainer"]
layout_mode = 2
text = "02"

[node name="Button3" type="Button" parent="GridContainer"]
layout_mode = 2
text = "03"

[node name="Button4" type="Button" parent="GridContainer"]
layout_mode = 2
text = "04"

[node name="Button5" type="Button" parent="GridContainer"]
layout_mode = 2
text = "05"

[node name="Button6" type="Button" parent="GridContainer"]
layout_mode = 2
text = "06"

[node name="Button7" type="Button" parent="GridContainer"]
layout_mode = 2
text = "07"

[node name="Button8" type="Button" parent="GridContainer"]
layout_mode = 2
text = "08"

[node name="Button9" type="Button" parent="GridContainer"]
layout_mode = 2
text = "09"

[node name="Button10" type="Button" parent="GridContainer"]
layout_mode = 2
text = "10"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 61.0
offset_top = -127.0
offset_right = 152.0
offset_bottom = -104.0
grow_vertical = 0
text = "Select Level"

[connection signal="pressed" from="GridContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="GridContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="GridContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="GridContainer/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="GridContainer/Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="GridContainer/Button6" to="." method="_on_button_6_pressed"]
[connection signal="pressed" from="GridContainer/Button7" to="." method="_on_button_7_pressed"]
[connection signal="pressed" from="GridContainer/Button8" to="." method="_on_button_8_pressed"]
[connection signal="pressed" from="GridContainer/Button9" to="." method="_on_button_9_pressed"]
[connection signal="pressed" from="GridContainer/Button10" to="." method="_on_button_10_pressed"]
